fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 html {
+  overflow: hidden;
   font-family: sans-serif;
   font-size: 16px;
   line-height: 1.5;
